<resources>
    <string name="app_name">Foodster</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Settings</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>

    <string name="menu_home">Home</string>
    <string name="menu_cuisines">Cuisines</string>
    <string name="menu_fav_cuisines">Favorite cuisines</string>
    <string name="menu_login">Login</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share app</string>
    <string name="menu_fav_recipes">Favorite recipes</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_up_text">New to Foodster? Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_with_google">Login with Google</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="foodster_login">Foodster Login</string>
    <string name="sign_in_as_admin">Sign in as admin</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add_cuisine">Cuisine, Ex: American</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="admin_toggle">Admin Toggle</string>
    <string name="enter_image_url">Enter image URL</string>
    <string name="recipe_ex_hamburger">Recipe, ex: Hamburger</string>
    <string name="calories_ex_200">Calories, ex: 200</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="calories">Calories</string>
    <string name="ingredients_display">Ingredients:</string>
</resources>
